[package]
name = "hexdmp"
version = "0.2.0"
authors = ["Badly Drawn Rod <rod@badlydrawngames.com>"]
description = """
hexdmp is a command line utility that dumps the contents of one or more files to stdout in hex.
"""
repository = "https://github.com/badlydrawnrod/hexdmp"
readme = "README.md"
license = "Unlicense OR MIT"
categories = [ "command-line-utilities" ]

edition = "2018"

[dependencies]
clap = "2"
